--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,14 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Multi-Class Advance Patient Scheduling: A Data-Driven Robust Approach"
 collection: talks
-type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
+type: ""
+permalink: 
+venue: ""
+date: 
 location: "San Francisco, California"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+INFROMS
+
+MSOM
+
