--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
 title: "Multi-Class Advance Patient Scheduling: A Data-Driven Robust Approach"
 collection: talks
-type: ""
+type: 
 permalink: 
-venue: ""
+venue: 
 date: 
-location: "San Francisco, California"
+location: 
 ---
 
 INFROMS
